<resources>
    <string name="app_name">boomerang</string>
    <string name="app_name_kr">부메랑</string>
    <string name="menu_home_search_description">Search a title of video</string>
    <string name="menu_home_search_title">Search</string>
    <string name="menu_home_order_title">Order</string>
    <string name="menu_home_order_description">Order video by selected standard</string>
    <string name="menu_home_setting_title">Setting</string>
    <string name="menu_home_setting_description">Navigate setting view</string>
    <string name="searchable_hint">찾는 동영상 제목을 입력해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_video_selection_title">동영상 선택</string>
    <string name="menu_video_selection_completion">완료</string>
    <string name="menu_video_selection_completion_description">If user selects a video and then click the button, screen pass to video doodle</string>
    <string name="menu_home_sd_close">Speed Dial Close</string>
    <string name="menu_home_sd_close_description">Expanded Speed Dial is closed</string>
    <string name="menu_home_sd_video_light">나만의 메모 작성</string>
    <string name="menu_home_sd_video_light_description">Go to way to Write memo on sub video</string>
    <string name="menu_home_sd_video">모두의 메모 작성</string>
    <string name="menu_home_sd_video_description">Go to write video memo on video</string>
    <string name="menu_home_order_create_title">생성일 기준</string>
    <string name="menu_home_order_modify_title">수정일 기준</string>
    <string name="menu_memo_modify">메모 수정</string>
    <string name="bottom_sheet_title">정렬 기준</string>
    <string name="bottom_sheet_create_recent">생성일 최신 순</string>
    <string name="bottom_sheet_create_old">생성일 오래된 순</string>
    <string name="bottom_sheet_modify_recent">수정일 최신 순</string>
    <string name="bottom_sheet_modify_old">수정일 오래된 순</string>
    <string name="fragment_audio_record_recognized_text">마이크아이콘를 누르면 연속으로 음성이 인식이 됩니다. 이후 중지하고 싶으시면 빈 화면 혹은 가운데 마이크 버튼을 누른 후 취소버튼을 눌러주세요 \n\n 디스크 아이콘을 누르면 음성이 하나로 합쳐집니다.</string>
    <string name="menu_home_sd_audio">음성 메모 작성</string>
    <string name="menu_home_sd_audio_description">Go to record audio and extract text</string>
    <string name="tb_audio_record_title">음성 메모</string>
    <string name="fragment_audio_record_et_title_hint">제목</string>
    <string name="menu_delete_title">삭제</string>
    <string name="menu_delete_description">현재 메모를 삭제합니다.</string>
    <string name="menu_audio_record_mic_title">음성인식</string>
    <string name="menu_audio_record_mic_description">이 버튼을 누르면 음성 인식이 시작합니다</string>
    <string name="menu_audio_record_save_title">메모저장</string>
    <string name="menu_audio_record_save_description">이 아이콘을 누르면 지금까지 작성한 메모가 저장됩니다</string>
    <string name="menu_video_doodle">다음</string>
    <string name="menu_video_doodle_description">메모 완료</string>
    <string name="menu_video_modify_title">완료</string>
    <string name="menu_video_modify_description">수정 완료</string>
    <string name="menu_video_edit_share_title">메모 공유</string>
    <string name="menu_video_edit_share_description">동영상 메모를 공유한다</string>
    <string name="menu_video_edit_save_title">메모 저장</string>
    <string name="menu_video_edit_save_description">동영상 메모를 저장한다</string>
    <string name="snackbar_video_doodle_light_video_end">영상이 끝났습니다</string>
    <string name="snackbar_video_doodle_light_cant_memo">이미 메모가 있습니다</string>
    <string name="snackbar_video_doodle_light_video_over">영상 시간을 초과하여 메모하실 수 없습니다</string>
    <string name="dialog_title_video_doodle_light_stop_memo">메모 작성을 중단하시겠습니까?</string>
    <string name="dialog_message_video_doodle_light_stop_memo">작성 중인 메모는 삭제됩니다.</string>
    <string name="dialog_negative_cancel">취소</string>
    <string name="dialog_positive_delete">삭제</string>
    <string name="dialog_title_video_doodle_light_delete_subvideo">해당 메모를 삭제하시겠습니까?</string>
    <string name="dialog_message_video_doodle_light_delete_subvideo">삭제한 메모는 되돌릴 수 없습니다.</string>
    <string name="menu_video_doodle_light_title">나만의 메모 작성</string>
    <string name="snackbar_video_save_enter_title">제목을 입력해주세요</string>
    <string name="menu_title_video_save">메모 확인</string>
    <string name="permission_rejected">Permission Not Granted By the User</string>
    <string name="title_warning">타이틀을 입력해주세요</string>
    <string name="audio_list_warning">인식된 음성이 존재하지 않습니다</string>
    <string name="stt_warning">구글앱 사용을 활성화해주시거나 구글 앱의 데이터를 삭제한 후 다시 시도해주세요.
이동하시겠습니까?</string>
    <string name="google_warning_title">구글 앱 문제가 있습니다</string>
    <string name="dialog_negative_close">닫기</string>
    <string name="dialog_positive_move">이동</string>
    <string name="dialog_memo_deletion_title">메모 삭제</string>
    <string name="dialog_memo_deletion_message">메모를 삭제하시겠습니까</string>
    <string name="fragment_audio_memo_dialog_deletion_positive">메모를 삭제하시겠습니까</string>
    <string name="fragment_video_selection_select_video">동영상을 선택해주세요</string>
    <string name="dialog_title_video_modify">메모 수정을 중단하시겠습니까?</string>
    <string name="dialog_message_video_modify">수정 내역은 삭제됩니다.</string>
    <string name="dialog_positive_out">나가기</string>
    <string name="dialog_memo_deletion_fail_message">메모를 삭제에 실패하였습니다.</string>
    <string name="memo">메모</string>
    <string name="fragment_home_tv_empty_description">메모를 작성해주세요</string>
    <string name="item_rv_home_show_audio_iv_icon_cd">음성 메모</string>
    <string name="item_rv_home_show_videos_cd">비디오 메모 썸네일</string>
    <string name="item_rv_home_show_videos_icon_cd_people">모두의 메모</string>
    <string name="item_rv_home_show_videos_icon_cd_person">나만의 메모</string>
    <string name="item_rv_home_show_videos_icon_cd">모두의 메모</string>
    <string name="app_intro_slide_2_title">나만의 메모</string>
    <string name="app_intro_slide_2_description">원하는 곳에 메모를 할 수 있어요</string>
    <string name="app_intro_slide_3_title">모두의 메모</string>
    <string name="app_intro_slide_3_description">다른 사람과 공유를 할 수 있어요</string>
    <string name="app_intro_slide_4_title">음성 메모</string>
    <string name="app_intro_slide_4_description">녹음을 멜론처럼 텍스트와 들을 수 있어요</string>
    <string name="app_intro_slide_5_title">부메랑 시작하기!</string>
    <string name="app_intro_slide_5_description">신개념 메모하러 가자!</string>
    <string name="app_intro_slide_1_text">동영상에 메모가 된다고?!\n\n음성 메모가 멜론처럼 재생된다고?!</string>
    <string name="exo_player_play_button_content_description">재생 버튼</string>
    <string name="exo_player_pause_button_content_description">일시 정지 버튼</string>
    <string name="bottom_sheet_create_recent_content_description">생성일 최신 순 체크</string>
    <string name="bottom_sheet_create_old_content_description">생성일 오래된 순 체크</string>
    <string name="bottom_sheet_modify_recent_content_description">수정일 최신 순 체크</string>
    <string name="bottom_sheet_modify_old_content_description">수정일 오래된 순 체크</string>
    <string name="textview_create_date_from_video_memo">생성일 : %1$s</string>
    <string name="textview_edit_date_from_video_memo">수정일 : %1$s</string>
    <string name="textview_time_from_subVideo">%1$s ~ %2$s</string>
</resources>