<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home_search"
        android:title="@string/menu_home_search_title"
        android:icon="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/menu_home_search_description"
        app:iconTint="?attr/colorOnSurface"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/menu_home_order"
        android:title="@string/menu_home_order_title"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        app:iconTint="?attr/colorOnSurface"
        android:contentDescription="@string/menu_home_order_description"
        app:showAsAction="ifRoom" />

</menu>