<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kotlinisgood.boomerang.ui.home.bottomsheet.BottomSheetFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bottom_sheet_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_create_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/bottom_sheet_create_recent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_create_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bottom_sheet_create_old"
            app:layout_constraintTop_toBottomOf="@id/tv_create_recent" />

        <TextView
            android:id="@+id/tv_edit_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bottom_sheet_modify_recent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_old" />

        <TextView
            android:id="@+id/tv_edit_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bottom_sheet_modify_old"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_recent" />

        <ImageView
            android:id="@+id/iv_check_create_recent"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/bottom_sheet_create_recent"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_done_24"
            android:visibility="@{viewModel.createRecent ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tv_create_recent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_create_recent" />

        <ImageView
            android:id="@+id/iv_check_create_old"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/bottom_sheet_create_old"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_done_24"
            android:visibility="@{viewModel.createOld ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tv_create_old"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_create_old" />

        <ImageView
            android:id="@+id/iv_check_edit_recent"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/bottom_sheet_modify_recent"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_done_24"
            android:visibility="@{viewModel.modifyRecent ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tv_edit_recent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_recent" />

        <ImageView
            android:id="@+id/iv_check_edit_old"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/bottom_sheet_modify_old"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_done_24"
            android:visibility="@{viewModel.modifyOld ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tv_edit_old"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_old" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>